--- a/02-scales_random_variable.Rmd
+++ b/02-scales_random_variable.Rmd
@@ -1,4 +1,4 @@
-# Данные и типы шкал
+# Данные и типы шкал {#scales}
 
 ## Измерение и переменная
 
@@ -72,9 +72,9 @@ kable(burnout[1:10,])
 
 <!--chapter:end-->
 
-# Вероятность и случайные величины 
+# Вероятность и случайные величины {#probability} 
 
-## Случайная величина
+## Случайная величина {#random-variable} 
 
 Мы немного поговорили про переменные, они же -- признаки исследуего нами объекта (рост, вес, пол, уровень образования и так далее). Поговорили, что чтобы измерить признак, нужно привести в соответствие какое-либо значение из шкалы. Теперь давайте посмотрим на математический смысл переменных и их значений.
 
@@ -188,7 +188,7 @@ $P(L_{.4857856}) = \frac{1}{множество всех точек на отре
 
 Получается, что мы не можем посчитать математически (статистически), и приходится прибегать к геометрическому определению.
 
-## График плотности вероятности
+## График плотности вероятности и гистограмма
 
 Построим таблицу и график частот для значений из отрезка.
 Для это сгенерируем набор из 10 случайных чисел в диапазоне [0;1].
@@ -247,7 +247,7 @@ as_tibble(line_sample_10000) %>%
 
 > Итак, запомнили, что мы рассматриваем признаки (переменные) как случайные величины, они могут быть дисркетные и непрерывные, и их вероятности описываются определенными законами распределения.
 
-# Распределения
+# Распределения {#distributions} 
 
 Что такое распределение? Мы постоянно употребляем это слово.
 
@@ -259,7 +259,7 @@ as_tibble(line_sample_10000) %>%
 
 $P(x) = \frac{e^{-(x - \mu)^{2}/(2\sigma^{2}) }} {\sigma\sqrt{2\pi}}$
 
-```{r}
+```{r echo = T, eval = T}
 plot(dnorm(1:1000, mean = 500, sd = 100))
 ```
 
