--- a/03-distributions.Rmd
+++ b/03-distributions.Rmd
@@ -1,4 +1,4 @@
-# Описательная статистика
+# Описательная статистика {#descriptives} 
 
 Мы переходим к обсуждению первого вида статистики из двух -- **описательной статистики** **(descriptive statistics)**. Когда мы гооворим об описательной статистике, мы всегда говорим об эмпричиески полученных данных, а не о генеральной совокупности. Чтобы что-то сказать о генеральной совокупности, нам нужно заниматься статистикой вывода, а пока остновимся на эмпирически полученных данных и выборочных распределениях.
 
@@ -50,7 +50,7 @@ burnout %>%
 **Эксцесс, "вытянутость" (kurtosis)** -- показатель, насколько график вытянут вверх или "приплюснут" вдоль оси абсцисс.
 
 <p align="center"> 
-```{r}
+```{r echo=F, out.width="125%" }
 knitr::include_graphics("docs/images/Illustration.jpeg")
 ```
 </p>
@@ -65,10 +65,6 @@ knitr::include_graphics("docs/images/Illustration.jpeg")
 
 Дело в том, что доход на душу населения -- очень неравномерный признак (переменная). https://ru.wikipedia.org/wiki/%D0%9A%D0%BE%D1%8D%D1%84%D1%84%D0%B8%D1%86%D0%B8%D0%B5%D0%BD%D1%82_%D0%94%D0%B6%D0%B8%D0%BD%D0%B8 
 
-Чем это отличается от статистического вывода?
-
-Допустим, мы хотим проверить гипотезу о том, что благосостояние россиян в 2022 снизилось по сравнению с 2008 годом.При этом, у нас нет возможность заглянуть в данные всех россиян, собранные, например, гипотетичким Росстатом. Тогда мы возьмем небольшую выбор  году и провести анализ: сравнить эти данные между собой. Они будут выглядить так: по строкам у нас идет каждый человек, по столбцам -- доход в 2008 и 2022 году, и мы, по сути, будем сравнивать цифры в этих двух колонках между собой. Это пример статистического вывода: мы проводим полноценный анализ 
-
 
 ### Среднее, медиана, мода
 
@@ -77,7 +73,7 @@ $\bar X = \dfrac{\sum_{i=1}^{n}x_i}{n}$
 
 Например, у нас есть набор данных:
 
-```{r}
+```{r echo = F}
 set.seed(42)
 sample_data1 <- sample(1:50, 11)
 sample_data1
@@ -88,13 +84,6 @@ sample_data1
 mean(sample_data1)
 ```
 
-```{r}
-set.seed(42)
-sample(1:10, 8)
-
-```
-
-
 **Медиана (median)** -- это граница, которая делает упорядочненное множество данных пополам. Для того, чтобы посчитать медиану, нам нужно: 1) расставить все имеющиеся значения в порядке возрастания; 2) найти середину: это будет либо значение, соответствующее месту $\frac{n}{2}+1$, если n -- нечетное, либо среднее из двух центральных значений $\frac{1}{2}(X_{n/2}+X_{n+1/2})$, если n -- четное.
 ```{r}
 sort(sample_data1)
@@ -103,14 +92,17 @@ median(sample_data1)
 
 
 
-```{r}
+```{r echo = F}
 sample_data2 <- sample(1:50, 10)
 sample_data2
+```
+
+```{r}
 sort(sample_data2)
 median(sample_data2)
 ```
 
-На практике нам редко встречаются данные, где каждоое значение представлено только один раз -- мы уже много обсуждали, что в статистике мы работает с вероятностями и частотами. Поэтому d реальности нужно не забывать, что мы делаим пополам не сами значения, как в случае с средним -- а распределение значений. На гистограмме или граифке плотности вероятности или гистограмму медиана -- это линия, которая делает график на две равные по площади части: слева и справа должно остаться одинаковое число данных.
+На практике нам редко встречаются данные, где каждое значение представлено только один раз -- мы уже много обсуждали, что в статистике мы работаем с вероятностями и частотами. Поэтому в реальности нужно не забывать, что мы делим пополам не сами значения, как в случае с средним -- а *распределение* значений. На гистограмме или графике плотности вероятности медиана -- это линия, которая делит график на две равные по площади части: слева и справа должно остаться одинаковое число данных (значений, взятых с их частотами).
 
 ```{r}
 burnout %>% 
@@ -138,13 +130,13 @@ mode <- function(x) {
 
 ### Особенности использования
 
-В примере с оценкой благосостояния мы выяснили, что среднее значение здесь -- плохой вариант для описательной статистики.
+В примере с оценкой благосостояния мы выяснили, что среднее значение здесь -- плохой выбор для описания этих данных с помощью мер центральной тенденции. Тогда какие меры центральной тенденции выбрать?
 
-Мера ЦТ | Шкала          | Какие данные | 
---------| ---------------| ------------ | 
-Среднее | Только количественная | распределение симметрично, нет заметных выборосов |
-Медиана | Количественная или порядковая | можем использовать, когда распределение не симметрично, есть выбросы, не можем использовать для номинативной шкалы |
-Мода | Номинативная (номинальная), порядковая, количественная | чаще всего используется там, где не можем производить метрические операции, но не можем посчитать ее для непрерывных величин |
+Мера ЦТ | Данные и шкала | Особенности | 
+--------| ---------------| ----------- | 
+Среднее | Только количественная: шкала отношений или интервальная | распределение симметрично, нет заметных выборосов |
+Медиана | Количественная или порядковая: шкала отношений, интервальная или порядковая (ранговая) | можем использовать, когда распределение не симметрично, есть выбросы, не можем использовать для номинативной шкалы |
+Мода | Любая шкала, Номинативная (номинальная), порядковая, количественная (отношений или интервальная) | чаще всего используется там, где не можем производить метрические операции, но не можем посчитать ее для непрерывных величин |
 
 
 ```{r central_tendency_sampling,include=FALSE}
@@ -168,6 +160,8 @@ prob=c(.05,.05,.07,.1,.1,.2,.3,.35,.3,.15,.1,.15,.20,.40,.50,.25,.1,.05,.05))
 
 colors<-c("Mean"="red4","Median"="blue4","Mode"="green4")
 ```
+
+*Где на графиках среднее, медиана и мода?*
 
 ```{r central_tendency_symm, echo=FALSE}
 
@@ -224,12 +218,12 @@ students %>%
 ```{r}
 kable(students[1:10,]) %>% scroll_box(width = "100%") 
 ```
+
 ```{r}
 students %>% 
   ggplot(aes(x=age)) +
   geom_histogram(binwidth = 1) +
-  # geom_density(x=age) +
-  # labs(x = 'года') +
+  geom_density(aes(x = age)) +
   theme_minimal()
 ```
 
@@ -262,11 +256,9 @@ students %>%
 mean(students$G_mat)
 ```
 
-
 ```{r}
 median(students$G_mat)
 ```
-
 
 
 ```{r}
@@ -277,13 +269,27 @@ mode(students$Mjob)
 
 ## Квантили, квартили и перцентили
 
-Мы выяснили, что медиана делит распределение пополам. Это удобно.
+Мы выяснили, что медиана делит распределение пополам. Это удобно. Например, чтобы оценить, ниже / выше каког значения находится первая или вторая половина данных. 
 
-Квантили -- делят распределение на кусочки по четверти данных.
+Такие вопросы возникают достаточно часто, и не только про половину данных, а про определенные кусочки данных.
+**Квантили** -- общее обозначение для черт, которые делят распределение на определенное число равных по объему данных.
 
-Квартиль
-Дециль
-Перцентиль
+**Перцентили** -- частные случаи квантилей, которые делят все распределение на 100 равных частей. Таким образом, в каждой части оказывается 1% данных.
+
+**Квартили** -- частные случаи квантилей, делят все распределение на четыре части, по 25% данных. То есть, всего квартителей 4, и они обозначаются буквой Q: Q1, Q2, Q3, Q4.
+
+Получается, что:
+
+* слева от первого (нижнего) квартиля $Q_1$ лежит 25% наблюдений
+* слева от второго (среднего) квартиля (медианы) $Q_2$ лежит 50% наблюдений
+* слева от третьего (верхнего) квартиля $Q_3$ лежит 75% наблюдений
+
+<p align="center"> 
+```{r fig.align = 'center', out.width="60%"}
+knitr::include_graphics("docs/images/quartiles.png")
+```
+</p>
+
 
 ## Меры вариативности
 
@@ -341,6 +347,8 @@ sd(students$G_mat)
 sd(students$Walc)
 ```
 
+**Межквартильный размах**
+
 
 ### Степени свободы
 
@@ -370,14 +378,33 @@ students %>%
   theme_minimal()
 ```
 
+# Нормальное распределение {#normdist} 
 
-# Центральная предельная теорема
+## Центральная предельная теорема
+
+**Центральная предельная теорема** -- важное понятие в статистике, применимой к исследованиям в социальных науках. Мы уже выучили, что переменные, с которыми мы работаем -- это случайные величины [#random-variable]. Именно этот факт позволяет нам вычислять могие параметры по тем формулам, которые мы используем: если бы мы работали не с случайными величинами, у нас была бы совсем другая статистика (кажется, куда более сложная)!
+
+В общем виде, ее можно сформулировать так: случайная величина распределеяется нормально.
+
+
+Из нее есть важное следствие:
+> Если мы проводим много одинаковых исследований, то выборочные средние этих исследований будут распределены нормально.
+
+Стандартное отклонение такого распределение называется **стандартной ошибкой среднего** 
 
 https://gallery.shinyapps.io/CLT_mean/
 
-# Нормальное распределение
+## Нормальное распределение и его свойства
+
+Мы уже обсуждали нормальное распределение, когда говорили про распределения в целом [# Распределения]. Это вероятностный закон, где заданым значениям признака приводится в соответствие вероятность встретить признак с таким значением, выраженный по формуле $P(x) = \frac{e^{-(x - \mu)^{2}/(2\sigma^{2}) }} {\sigma\sqrt{2\pi}}$
+
+
 
 ## Стандартное нормальное распределение
+
+
+
+## Z-преобразование
 
 # Доверительный интервал
 
