--- a/index.Rmd
+++ b/index.Rmd
@@ -18,7 +18,7 @@ library(tidyverse)
 library(kableExtra)
 ```
 
-# Статистика и ее место в жизни
+# Статистика и ее место в жизни {#intro} 
 
 ## Вероятности, формулировки и выводы
 
