--- a/03-distributions.Rmd
+++ b/03-distributions.Rmd
@@ -301,7 +301,7 @@ knitr::include_graphics("docs/images/quartiles.png")
 
 Меры центральной тенденции могут совпадать, хотя меры изменчивость значительно отличаться, например
 
-```{r distributions_with_the_same_means_generation}
+```{r distributions_with_the_same_means_generation, echo=F}
 set.seed(123)
 tibble(id = 1:100,
        x1 = rnorm(100, mean = 2, sd = 1),
@@ -316,7 +316,8 @@ rnorm_three %>%
              labeller = labeller(name = la)) +
   labs(x = "Value",
        y = "Count") +
-  scale_x_continuous(breaks = -5:15)
+  scale_x_continuous(breaks = -5:15) +
+  theme_minimal()
 ```
 
 ### Размах, стандартное отклонение и дисперсия
@@ -348,9 +349,6 @@ sd(students$Walc)
 ```
 
 **Межквартильный размах**
-
-
-### Степени свободы
 
 
 ## Боксплот и вайолинплот 
@@ -390,7 +388,19 @@ students %>%
 Из нее есть важное следствие:
 > Если мы проводим много одинаковых исследований, то выборочные средние этих исследований будут распределены нормально.
 
-Стандартное отклонение такого распределение называется **стандартной ошибкой среднего** 
+```{r}
+samplemeans <- replicate(1000, mean(rnorm(100, mean = 100, sd = 15)))
+hist(samplemeans, breaks = 30)
+```
+
+```{r}
+mean(samplemeans)
+sd(samplemeans)
+```
+
+
+Стандартное отклонение распределение выборочных срених называется **стандартной ошибкой среднего (standard error of the mean (s.e.m. или se)** и вычисляется по формуле $\sigma_{\overline{x}}= \frac{\sigma} {\sqrt{n}}$ или, используя выборочное стандартное отклонение по одной выборке $s_{\overline{x}}= \frac{s} {\sqrt{n}}$
+
 
 https://gallery.shinyapps.io/CLT_mean/
 
@@ -407,4 +417,8 @@ https://gallery.shinyapps.io/CLT_mean/
 ## Z-преобразование
 
 # Доверительный интервал
+
+Мы рассмотрели описательные статистики: меры центральной тенденции и меры вариативности переменной. Этоо были тоочечные оценки: мы используем эти величины, чтобы описать наши данные, перейти от таблички с одному или нескольким числам. Помимо точечных оценок используются также интервальные -- если мы хотим получить не конкретное число, а интервал, в котором зато точно будет содержаться интересующий нас параметр.
+
+Доверительный интервал --
 
