--- a/03-distributions.Rmd
+++ b/03-distributions.Rmd
@@ -55,7 +55,7 @@ knitr::include_graphics("docs/images/Illustration.jpeg")
 ```
 </p>
 
-## Меры центральной тенденции
+## Меры центральной тенденции {#ctm} 
 
 Меры центральной тенденции -- это такие описательные статистики, которые позволяют что-то сказать про "центр масс" распределения: где у него центр, где больше всего данных в этом распределении? Это бывает очень полезно на прикладных вопросах. 
 
@@ -267,7 +267,7 @@ prop.table(table(students$Mjob))
 mode(students$Mjob)
 ```
 
-## Квантили, квартили и перцентили
+## Квантили, квартили и перцентили 
 
 Мы выяснили, что медиана делит распределение пополам. Это удобно. Например, чтобы оценить, ниже / выше каког значения находится первая или вторая половина данных. 
 
@@ -291,7 +291,7 @@ knitr::include_graphics("docs/images/quartiles.png")
 </p>
 
 
-## Меры вариативности
+## Меры вариативности {#varm} 
 
 Вариативность -- изменичвость значений, как сильно разнятся данные от наблюдения к наблюдению.
 
