diagrams normal dist

--- a/03-distributions.Rmd
+++ b/03-distributions.Rmd
@@ -382,8 +382,7 @@ students %>%
 
 **Центральная предельная теорема** -- важное понятие в статистике, применимой к исследованиям в социальных науках. Мы уже выучили, что переменные, с которыми мы работаем -- это случайные величины [#random-variable]. Именно этот факт позволяет нам вычислять могие параметры по тем формулам, которые мы используем: если бы мы работали не с случайными величинами, у нас была бы совсем другая статистика (кажется, куда более сложная)!
 
-В общем виде, ее можно сформулировать так: случайная величина распределеяется нормально.
-
+В общем виде, ее можно сформулировать так: случайная величина, подверженная влиянию многих факторов, чье значение нельзя предсказать точноо, распределена нормально.
 
 Из нее есть важное следствие:
 > Если мы проводим много одинаковых исследований, то выборочные средние этих исследований будут распределены нормально.
@@ -406,8 +405,19 @@ https://gallery.shinyapps.io/CLT_mean/
 
 ## Нормальное распределение и его свойства
 
-Мы уже обсуждали нормальное распределение, когда говорили про распределения в целом [# Распределения]. Это вероятностный закон, где заданым значениям признака приводится в соответствие вероятность встретить признак с таким значением, выраженный по формуле $P(x) = \frac{e^{-(x - \mu)^{2}/(2\sigma^{2}) }} {\sigma\sqrt{2\pi}}$
+Мы уже обсуждали нормальное распределение, когда говорили про распределения в целом [# Распределения]. Это вероятностный закон, где заданным значениям признака приводится в соответствие вероятность встретить признак с таким значением, выраженный по формуле $P(x) = \frac{e^{-(x - \mu)^{2}/(2\sigma^{2}) }} {\sigma\sqrt{2\pi}}$
 
+Нормальное распределение интересно нам как минимум потому, что многие признаки, которые мы исследуем, согласно центральной предельной теореме распределены номрально. Помимо этого оно обладает рядом свойств:
+
+* симметрично
+* унимодально (только одна мода)
+* отклонения от среднего подчинаются вероятностному закону: знаем, сколько процентов данных содержится в скольких стандартных отклонения от среднего
+
+<p align="center"> 
+```{r fig.align = 'center', out.width="60%"}
+knitr::include_graphics("docs/images/Standard_deviation_diagram.png")
+```
+</p>
 
 
 ## Стандартное нормальное распределение
@@ -415,6 +425,8 @@ https://gallery.shinyapps.io/CLT_mean/
 
 
 ## Z-преобразование
+
+$z = \frac{x - \bar x}{s}$
 
 # Доверительный интервал
 
