--- a/03-distributions.Rmd
+++ b/03-distributions.Rmd
@@ -403,11 +403,25 @@ sd(samplemeans)
 
 https://gallery.shinyapps.io/CLT_mean/
 
+## Стандартная ошибка среднего
+
+$\mathrm{se} = \frac{\sigma}{\sqrt{n}} = \frac{sd}{\sqrt{n}}$
+
+
 ## Нормальное распределение и его свойства
 
 Мы уже обсуждали нормальное распределение, когда говорили про распределения в целом [# Распределения]. Это вероятностный закон, где заданным значениям признака приводится в соответствие вероятность встретить признак с таким значением, выраженный по формуле $P(x) = \frac{e^{-(x - \mu)^{2}/(2\sigma^{2}) }} {\sigma\sqrt{2\pi}}$
 
-Нормальное распределение интересно нам как минимум потому, что многие признаки, которые мы исследуем, согласно центральной предельной теореме распределены номрально. Помимо этого оно обладает рядом свойств:
+Часто можно увидеть такую запись, обозначающую нормальное распределение: $\sim \mathcal{N}(\mu, \, \sigma^2)$
+
+<p align="center"> 
+```{r fig.align = 'center', out.width="60%"}
+knitr::include_graphics("docs/images/different_norm_vis-1.png")
+```
+</p>
+
+
+Нормальное распределение интересно нам как минимум потому, что многие признаки, которые мы исследуем, согласно центральной предельной теореме распределены номрально. Помимо этого **нормальное распределение обладает рядом свойств**:
 
 * симметрично
 * унимодально (только одна мода)
@@ -420,9 +434,18 @@ knitr::include_graphics("docs/images/Standard_deviation_diagram.png")
 </p>
 
 
+* в пределах одного стандартного отклонения от среднего значения лежит 68% значений — это очень частотные значения;
+* в пределах двух стандартных отклонений от среднего значения лежит 95% значений — бо́льшая часть выборки;
+* в пределах трех стандартных отклонений от среднего значения лежит практически 100% выборки — то есть вся выборка.
+
 ## Стандартное нормальное распределение
 
 
+<p align="center"> 
+```{r fig.align = 'center', out.width="60%"}
+knitr::include_graphics("docs/images/standatr_normrasp.png")
+```
+</p>
 
 ## Z-преобразование
 
@@ -432,5 +455,15 @@ $z = \frac{x - \bar x}{s}$
 
 Мы рассмотрели описательные статистики: меры центральной тенденции и меры вариативности переменной. Этоо были тоочечные оценки: мы используем эти величины, чтобы описать наши данные, перейти от таблички с одному или нескольким числам. Помимо точечных оценок используются также интервальные -- если мы хотим получить не конкретное число, а интервал, в котором зато точно будет содержаться интересующий нас параметр.
 
-Доверительный интервал --
+Доверительный интервал -- процент выборок из генеральной совокупности, интервальные оценки которых будут содержать популяционное среднее.
+
+https://rpsychologist.com/d3/ci/ 
+
+Интервальные оценки
+
+Доверительные интервал считается как $\pm t \times \mathrm{se} \\$
+
+* $68\%:  \pm  1 \times \mathrm{se} \\$
+* $95\%:  \pm  1.96 \times \mathrm{se} \\$
+* $99\%:  \pm  3 \times \mathrm{se} \\$
 
