--- a/06-ct.Rmd
+++ b/06-ct.Rmd
@@ -1,4 +1,4 @@
-# Нормальное распределение {#normdist} 
+# Нормальное распределение и оценки популяции {#normdist} 
 
 ## Центральная предельная теорема
 
