--- a/03-probability.Rmd
+++ b/03-probability.Rmd
@@ -1,77 +1,3 @@
-# Данные и типы шкал {#scales}
-
-## Измерение и переменная
-
-Что значит измерить что-либо? Это значит, **привести в соответствие исследуемому признаку какое-либо значение на шкале**.
-
-Что может примером признака? Что угодно, что нам нужно измерить в рамках исследования: количество кружек кофе в день, уровень концентрации, количество ошибок, время реакции, степень выгорания, количество выполненных задач, уровень нейротизма, рейтинг студента, количество детей в семье, температура и т.д.
-
-**Признак**, который мы исследуем, по-другому называется **переменной**. С этим понятием мы будем сталкиваться постоянно в анализе данных. По сути, если мы посмотрим на табличку наблюдений, то любой столбец с измерениям -- это переменная. По строкам располагаются наблюдения, например, каждый новый человек из нашей выборки. Значение в  определенной колонке -- это **значение** переменной данного наблюдения.
-
-Вернемся к кейсу с Никитой, которые изучает выгорание сотрудников ВУЗов. Сделаем табличку данных, которые мог намерить Никита.
-
-```{r, eval=TRUE, message = FALSE}
-library(tidyverse)
-library(kableExtra)
-teacher_number <- seq(1,30,1)
-age <-  sample(22:60, size = 30, replace = T)
-exp_years <- sample(1:8, size = 30, replace = T)
-exp_scaled <- ifelse(exp_years >= 1 & exp_years <= 2, "от 1 до 2",
-                     ifelse(exp_years > 2 & exp_years <= 5, "от 3 до 5",
-                            ifelse(exp_years > 5, "больше 5", exp_years)))
-burnout_MBI <- sample(19:70, size = 30, replace = T)
-univer <-  rep(c("MSU", "HSE", "MSU", "RANEPA", "HSE", "RANEPA"),5)
-burnout <- tibble(teacher_number, age, exp_years, exp_scaled, burnout_MBI, univer)
-kable(burnout[1:10,])
-```
-<!--kable(burnout) %>% scroll_box(width = "100%")-->
-
-*Что здесь будет являться переменными?*
-
-В определении измерения помимо признака есть второе важное понятие -- это шкала.
-
-**Шкала** -- это система измерения. Для того, чтобы мы все могли пользоваться одинаковыми единицами измерениями и не сходили с ума, мы, люди планеты Земля, пользуемся едиными шкалами. Всего их 4, и они бывают **метрические и неметрические** -- то есть, можем ли мы приложить измерительную линейку к ним или нет. В качестве измерительной линейки здесь имеется в виду любой условный прибор, в котором есть цена деления (сантиметр, грамм, секунда, штука).
-
-## Количественные и неколичественные данные
-
-Данные, измеренные метрическими шкалами -- это **количественные** данные (например, рост, вес, число заболевших, температура. То, что нельзя измерить метрическими шкалами (например, цвет глаз, самочувствие, уровень нейротизма, уровень образования) -- это **неколичественные** данные, которые могут носить разные названия: **категориальные**, иногда **качественные**. 
-
-<span style="color: grey;">Иногда данные называют качественными в противоположность количественным, но это не совсем верно: разделение на количественные и качественные обычно применяется по отношению к типам исследований, где качественные исследования -- это, например, интервью или анализ блоков текста. Но в результате этого анализа у нас вполне могут получиться количественные переменные, например, количество раз, которые употреблялось то или иное слово, поэтому по отношению к данным, а не типам исследований, я рекомендую не использовать слово "качественные". </span>
-
-С количественными данными попроще -- это все, что можно измерить метрической шкалой, условной линейкой.
-
-Среди неколичественных данных встречаются два типа: категориальные и ранговые (порядковые) 
-
-Эти данные мы подробно рассмотрим на шкалах.
-
-## Типы шкал
-
-Как мы уже поняли, разные данные относятся к разным шкалам. 
-
-Разные шкалы обладают разной **измерительной мощностью** -- точностью, с которой мы измеряем признак. Один и тот же признак можно измерить с разной точностью: например, в зависимости от исследовательского вопроса, рост может быть выражен количественно в сантиметрах на интервале {0; ∞}, а может быть закодирован в виде {"меньше 150 см"; 150 см и больше}, если нас интересует только преобладание над определенной чертой. 
-
-Всего существуют 4 шкалы, если располагать их снизу вверх по измерительной мощности: наименований, порядковая, интервальная, отношений.
-
-Шкала | Описание                                       | Возможные операции | Примеры              | 
-------| -----------------------------------------------| ------------------ | -------------------- | 
-**Отношений (абсолютная)** | Количественная, есть абсолютный ноль, можно посчитать и *на сколько* больше или меньше, и *во сколько раз* | =, $\neq$, >, <, +, -, ×, ÷ | Рост, вес, число заболевших | 
-**Интервальная (разности)** | Количественная, но нет абсоолютного нуля, можно посчитать  *на сколько* больше или меньше, но нельзя посчитать, *во сколько раз* | =, $\neq$, >, <, +, - | Температура в градусах Цельсия, времяисчисление по разным календарям | 
-**Порядковая (ранговая, ординальная)** | Категориальная (качественная), можно установить "больше" или "меньше", но нельзя посчитать количественно, на сколько больше или меньше | =, $\neq$, >, < | Уровень образования, уровень нейротизма, спортивный рейтинг | 
-**Наименований (номинальная)** | Категориальная (качественная), нельзя установить "больше" или "меньше" | =, $\neq$ | Пол, цвет, место жительства, название университета | 
-
-
-## Непрерывные и дискретные данные
-
-Видим, что самые богатые возможности для измерений у нас простираются в количественных шкалах -- на шкале отношений (она самая крутая) и интервальной шкале (она похуже и вообще, на самом деле, в исследованиях в нашей области встречается редко).
-
-Количественные данные бывают дискретные, когда переменная принимает строго определенные значения, и непрерывные, когда может принимать какие угодно значения, до бесконечности или на заданном интервале.
-
-Например, в нашем примере с исследованием выгорания переменная возраст (age) может принимать любые значения: преподаватели могут быть и возраста 25 лет, и 27.5 лет, и 31.666.. лет -- это все значения из *области допустимых значений для этой переменной*. Но если мы рассмотрим количество заболевших коронавирусом, то их никак не может быть 27.5 или 31.666.. -- заболевшие не выражаются в дробных долях от одного человека.
-
-Важное понятие здесь -- **область допустимых значений**. У непрерывной переменной это всегда интервал, например {0;+∞}, у дисретных -- строго определенные значения, которые, тем не менее, могут тоже стремиться к бесконечности, например, {0;1;2;3;4;5;6;7;8...}
-
-<!--chapter:end-->
-
 # Вероятность и случайные величины {#probability} 
 
 ## Случайная величина {#random-variable} 
@@ -90,7 +16,12 @@ kable(burnout[1:10,])
 
 Это понятие нужно нам для того, чтобы мы могли считать **вероятности** наступления определенных **событий**, то есть наших измеренных переменных. Дело в том, что про вероятности случайных величин нам плюс-минус понятно и просто, а вот если величина перестает быть случайной, расчет вероятности становится сложнее. И мы пока рассматриваем только случайные величины.
 
+
 ## Вероятность
+
+```{r, eval=TRUE, echo = FALSE, message = FALSE}
+library(tidyverse)
+```
 
 Что такое вероятность?
 
@@ -247,108 +178,3 @@ as_tibble(line_sample_10000) %>%
 
 > Итак, запомнили, что мы рассматриваем признаки (переменные) как случайные величины, они могут быть дисркетные и непрерывные, и их вероятности описываются определенными законами распределения.
 
-# Распределения {#distributions} 
-
-Что такое распределение? Мы постоянно употребляем это слово.
-
-Говоря о распределениях, мы имеем в виду **закон распределения случайной величины** – соответствие между возможными значениями этой величины из области ее допустимых значений и: вероятностями этих значений -- для дискретной величины, либо плотностью вероятности -- для непрерывной величины.
-
-## Виды распределений
-
-Законы распределений вероятностей можно вывести совсем не для всех величин! Но так сложилось, что некоторые закономерности, распределения вероятностей мы можем описать формулами, как в физике: сила тяжести (сила, с которой Земля притягивает все теля) прямо пропорциональная массе объекта, взятая с коэффициентом ускорения свободного падения $F = m*g$. Мы это заметили относительно окружающего мира и вывели закон (не лично мы, а вообще представители планеты Земля). Точно так же и с распределниями: мы заметили, что вероятности распределения некоторых случайных величин подчиняются определенным законам, и записали их. Например, доказано, что непрерывные случайные величины, на которые действует множество случайных факторов (например, рост, вес и тд), распределяются в соответствии с **распределением Гаусса**, оно же -- **нормальное распределение**. Его формула:
-
-$P(x) = \frac{e^{-(x - \mu)^{2}/(2\sigma^{2}) }} {\sigma\sqrt{2\pi}}$
-
-```{r echo = T, eval = T}
-plot(dnorm(1:1000, mean = 500, sd = 100))
-```
-
-```{r, echo=F, eval=F}
-# dist_sample <- sample(1:1000, 1000, replace = T)
-
-# normdist_sample <- dnorm(1:1000, 500, 100)
-# as_tibble(normdist_sample) %>% 
-#   ggplot(aes(x=1:1000, y = normdist_sample)) +
-#   geom_density(aes(x=1:1000, y = normdist_sample)) +
-#   theme_minimal()
-```
-
-Или, например, экспоненциальное распределение:
-
-$P(x)= \lambda \times e^{-\lambda x}$
-
-```{r}
-plot(dexp(x = 1:100, rate = 0.1))
-```
-χ2-распределение:
-
-$P(x)= \lambda \times e^{-\lambda x}$
-
-```{r}
-plot(dchisq(1:1000, df=100))
-```
-
-
-Или, например, биномиальное распределение:
-
-$P(k | n, p) = \frac{n!}{k!(n-k)!} \times p^k \times (1-p)^{n-k} =  {n \choose k} \times p^k \times (1-p)^{n-k}$
-
-```{r}
-plot(dbinom(1:100, size=100, prob=0.5))
-```
-Посмотреть и ужаснуться можно тут http://www.math.wm.edu/~leemis/chart/UDR/UDR.html. Нам, к счастью, ничего из этого не понадобится.
-
-Менее пугающая версия https://www.johndcook.com/blog/distribution_chart/#normal
-
-На примере данных про выгорание:
-
-```{r}
-kable(burnout)
-```
-
-
-```{r}
-burnout %>% 
-  ggplot(aes(x=exp_years)) +
-  geom_histogram(binwidth = 0.5) +
-  theme_minimal()
-```
-
-
-
-```{r}
-burnout %>% 
-  ggplot(aes(x=age)) +
-  geom_density() +
-  theme_minimal()
-```
-
-
-## Функции распределения
-
-Выше мы познакомились с плотностью вероятностью, зафиксируем все применимые к вероятности функции, которые бывают полезны:
-
-* **функция плотности вероятности (probability density function)** для непрерывных СВ (например, рост, вес) и **функция вероятности (probability mass function)** для дискретных СВ (например, количество заболевших) -- самая простая базовая функция, часто обозначается буквой `d*`
-* **функция накопленной вероятности / плотности вероятности (cumulative distribution function)** для непреревных СВ, часто обозначается буквой `p*`
-* **квантильная функция (quantile function)**, она же обратная функция накопленной плотности распределения, об этом попозже, часто обозначается буквой `q*`
-**Функция плотности вероятности (cumulative distribution function; cdf)**
-
-Зачем они нужны?
-
-Разберемся на примере тестов на IQ.
-
-**Функция плотности вероятности (probability density function)**
-```{r}
-iq <- seq(50,150, 0.1)
-plot(iq, dnorm(iq, mean = 100, sd = 15))
-```
-
-**Функция накопленной плотности  (cumulative distribution function; cdf)**
-
-```{r}
-plot(iq, pnorm(iq, mean = 100, sd = 15))
-```
-
-
-
-<!--chapter:end-->
