--- a/06-ct.Rmd
+++ b/06-ct.Rmd
@@ -1,33 +1,34 @@
-# Нормальное распределение и оценки популяции {#normdist} 
+# Нормальное распределение и оценки {#normdist} 
 
-## Центральная предельная теорема
+## Центральная предельная теорема {#ctt}
 
-**Центральная предельная теорема** -- важное понятие в статистике, применимой к исследованиям в социальных науках. Мы уже выучили, что переменные, с которыми мы работаем -- это случайные величины [#random-variable]. Именно этот факт позволяет нам вычислять могие параметры по тем формулам, которые мы используем: если бы мы работали не с случайными величинами, у нас была бы совсем другая статистика (кажется, куда более сложная)!
+**Центральная предельная теорема** -- важное понятие в статистике, применимое к исследованиям в социальных науках. Мы уже выучили, что переменные, с которыми мы работаем -- это случайные величины [#random-variable]. Именно этот факт позволяет нам вычислять могие параметры по тем формулам, которые мы используем: если бы мы работали не с случайными величинами, у нас была бы совсем другая статистика (кажется, куда более сложная)!
 
-В общем виде, ее можно сформулировать так: случайная величина, подверженная влиянию многих факторов, чье значение нельзя предсказать точноо, распределена нормально.
+В общем виде, ее можно сформулировать так: 
+
+> Значения признака, являющегося случайной величиной (чье значение нельзя предсказать точно) и подтверженного влиянию нескольких независимых факторов, распределены нормально.
 
 Из нее есть важное следствие:
 > Если мы проводим много одинаковых исследований, то выборочные средние этих исследований будут распределены нормально.
 
-```{r}
-samplemeans <- replicate(1000, mean(rnorm(100, mean = 100, sd = 15)))
-hist(samplemeans, breaks = 30)
+```{r, eval=TRUE, echo = FALSE, message = FALSE, }
+means_from_samples <- replicate(1000, mean(rnorm(100, mean = 100, sd = 15)))
+hist(means_from_samples, breaks = 30)
 ```
 
 ```{r}
-mean(samplemeans)
-sd(samplemeans)
+mean(means_from_samples)
+sd(means_from_samples)
 ```
-
 
 Стандартное отклонение распределение выборочных срених называется **стандартной ошибкой среднего (standard error of the mean (s.e.m. или se)** и вычисляется по формуле $\sigma_{\overline{x}}= \frac{\sigma} {\sqrt{n}}$ или, используя выборочное стандартное отклонение по одной выборке $s_{\overline{x}}= \frac{s} {\sqrt{n}}$
 
-
+Визуализация принципов работы 
 https://gallery.shinyapps.io/CLT_mean/
 
 ## Стандартная ошибка среднего
 
-$\mathrm{se} = \frac{\sigma}{\sqrt{n}} = \frac{sd}{\sqrt{n}}$
+$se = \frac{\sigma}{\sqrt{n}} = \frac{sd}{\sqrt{n}}$
 
 
 ## Нормальное распределение и его свойства
@@ -37,7 +38,7 @@ $\mathrm{se} = \frac{\sigma}{\sqrt{n}} = \frac{sd}{\sqrt{n}}$
 Часто можно увидеть такую запись, обозначающую нормальное распределение: $\sim \mathcal{N}(\mu, \, \sigma^2)$
 
 <p align="center"> 
-```{r fig.align = 'center', out.width="60%"}
+```{r fig.align = 'center', eval=TRUE, echo = FALSE, message = FALSE, out.width="60%"}
 knitr::include_graphics("docs/images/different_norm_vis-1.png")
 ```
 </p>
@@ -83,8 +84,8 @@ https://rpsychologist.com/d3/ci/
 
 Интервальные оценки
 
-Доверительные интервал считается как $\pm t \times \mathrm{se} \\$
+Доверительные интервал считаются как $\pm Z_\% \times \mathrm{se} \\$
 
 * $68\%:  \pm  1 \times \mathrm{se} \\$
-* $95\%:  \pm  1.96 \times \mathrm{se} \\$
+* $95\%:  \pm  2 \times \mathrm{se} \\$
 * $99\%:  \pm  3 \times \mathrm{se} \\$
