--- a/07-inference.Rmd
+++ b/07-inference.Rmd
@@ -26,71 +26,24 @@ knitr::include_graphics("docs/images/sample-inference.png")
 
 > Исследование семейных пар в России (объем выборки составил 100 семейных пар), в которых есть дети подросткового возраста, показало, что те пары, где отец и мать работают полный рабочий день, они проводят со своими детьми в среднем 15 часов свободного времени в неделю. Согласно данным проведенного исследования, стандартное отклонение оказалось равным 4,5 (ч). Можно ли на уровне доверия 0,99 утверждать, что в семьях, в которых работают и отец, и мать, в среднем в течение недели родители проводят с детьми подросткового возраста больше 14 часов?
 
-## Идея статистического тестирования гипотез (NHST)
+<div class="advanced">
+<details>
+<summary>*Решение*</summary>
 
-Мы находим в рамках фреквентистской (частотной) статистики -- то есть говорим о частотах и вероятностях. На выборочных оценках одного проведенное исследования мы мало что могли бы сказать: допустим, мы поисследовали 100 семейных пар и посчитали, что среднее время, которое родители проводят с детьми в России, равно 15 часов, но как понять, равно ли среднее в генеральной совокупности так же 15, а не например 18?
+1. Сначала определеяем, о чем нас спрашивают в этой задаче: нам нужно посотроить доверительный интервал для выборочного среднего = 15 и сравнить его с числом 14: находится оно левее этого интервала, и тогда можно сказать, что родители проводят с детьми в среднем больше 14 часов, или 14 входит в этот интервал, и тогда это утверждение будет неверно
 
-Идея статистического тестирования гипотез (null hypothesis statistical testing) базируется на том, что мы выдвигаем какое-то предположение относительно генеральной совокупности и ее среднего (математического ожидания) и статистически проверяем: если мы будем выбирать много выборок и считать их средние, какова веротность получить такие или более отличающиеся от популяционных выборочные оценки чисто случайным образом, если на самом деле это не так?
+2. Вычисляем доверительный интервал CI (confidence interval): равен $Z_{99\%} \times se$:  Z-значение, при котором охватывается 99% даннных, равно примерно 3.
+$se = \frac{\sigma}{\sqrt{n}} = \frac{sd}{\sqrt{n}} = \frac{4.5}{\sqrt{100}} = 0.45$
+Доверительный интервал равен $Z_{99\%} \times se = 3 \times 0.45 = 1.35$:
 
-> Допустим, мы предполагаем, что в мире родители проводят со своими детьми в среднем не 15, а 18 часов свободного времени в неделю. Отличается статически значимо время, которое проводят родители с детьми в России?
+3. Таким образом, можем записать доверительный интервал: $[M-CI; M+CI] = [15-1.35; 15+1.35] = [13.65;16.35]$. Сравним его с числом 14: видимо, что 14 входит в этот интервал, то есть, утверждение, что родители проводят с детьми в среднем больше 14 часов на уровне доверия 0.99 неверно.
 
-$\mu$ = 18, M = 15, n = 100, sd = 4.5
+</details>
+</div>
 
-Построим распределение выборочных средних. Мы предположили, что популяционное среднее равно 18, а чему равно стандартное отклонение этого распределения?
+## Идея статистического вывода
 
-Сначала считаем стандартную ошибку среднего $\mathrm{se} = \frac{\sigma}{\sqrt{n}} = \frac{sd}{\sqrt{n}}$
-
-Как понять, насколько далеко наше выборочное среднее отклонилось от популяционного в 18? 
-
-Надо посчитать z-оценку!
-
-<!-- $z = \frac{x - \bar x}{s}$ -->
-
-https://gallery.shinyapps.io/dist_calc/ 
-
-
-## Чек-лист проверки гипотезы
-
-* Сформулирована **эмпирическая гипотеза** (гипотеза на языке возможностей того исследования, которое будет проводиться), выделены **зависимая и независимая переменная** и характер исследуемой связи между ними.
-* Есть понимание, как будут выглядеть собранные данные.
-* Сформулированы **нулевая** $H_0$ и **альтернативная** $H_1$ **гипотезы** 
-* Выбраны **уровень значимости** $\alpha$ (чаще всего α=0.05) и **статистическая мощность** $power = 1-\beta$ (чаще всего power=0.8).
-* Выбран **статистический метод** проверки гипотезы (например, t-test, Манна-Уитни тест, ANOVA, тест Краскела-Уоллиса, корреляционный тест, линейная регрессия и т.д.).
-* На основании α, power и размера эффекта предыдущих исследований для выбранного статистического метода рассчитан **размер необходимой выборки**.
-* Выбрана среда анализа данных, данные предобработаны.
-* Для выбранных переменных по отдельности посчитаны **описательные статистики**, переменные визуализированы с помощью гистограммы (histogram) или столбчатой диаграммы (barplot) или графика плотности вероятности (density plot).
-* Проведен **статистический тест** выбранным статистическим методом, рассчитаны p-value, ключевая статистика (t-значение, F-значение, R, R2 и т.д) и размер эффекта (Cohen’s d, eta squared и тд).
-* Полученные в ходе статистического теста **статистики проинтерпретированы**
-* На основании полученных статистик **сделаны выводы относительно эмпирической гипотезы**.
-* Данные в**изуализированы** иллюстрирующим статистический тест графиком (диаграмма рассеяния с линией тренда, боксплот, вайолин плот и другие).
-
-## Эмпирические гипотезы, данные и выводы
-
-**Эмпирические гипотезы** – те, которые мы можем проверить опытным путем. Чтобы правильно их сформулировать, нам надо также определиться с типом эмпирического исследования, которое возможно для проверки наших теоретических гипотез. В психологических исследованиях это чаще всего **эксперимент, квази-эксперимент, корреляционное исследование (и лонгитюдное исследование** как его подвид). Иногдd бывает **case study**, исследование одного конкретного случая, чаще в когнитивной психологии и нейронауках.
-
-Эмпирические гипотезы сформулированы в проверяемом для нашего исследования виде, то есть переведенные на язык исследования, исходя из наших предполагаемых переменных и их значений. 
-
-<p align="center"> 
-```{r eval=TRUE, echo = FALSE, message = FALSE, fig.align = 'center', out.width="100%"}
-knitr::include_graphics("docs/images/hypothesis.png")
-```
-</p>
-
-Ситуация 1
-
-> Предположим, что группа ученых хочет исследовать влияние курения на возникновение ментальных расстройств Какие исследования можно провести для исследования этого вопроса?
-
-Ситуация 2
-
-> Предположим, __ вызывает __
-
-Ситуация 3
-
-> Предположим, что перед выборам в государственную думу группа социологов проводит опрос общественного мнения с целью выявления предпочтений к кандидатам. Для этого операторы колл-центра обзванивали телефонные номера, выбранные случайным образом из справочника телефонов Москвы, по принципу "каждый десятый номер". Обзвон продолжался в течение недели в рабочее время операторов колл-центра с 10 до 18.
-
-
-
-Как сделать правильный вывод?
+Как сделать правильный вывод и не облажаться?
 
 * Сформулировать осмысленную проверяемую ипотезу
 * Подобрать репрезентативную выборку
@@ -105,6 +58,64 @@ knitr::include_graphics("docs/images/garbage.jpg")
 ```
 </p>
 
+Мы находим в рамках фреквентистской (частотной) статистики -- то есть говорим о частотах и вероятностях. На выборочных оценках одного проведенного исследования мы мало что могли бы сказать: допустим, мы поисследовали 100 семейных пар и посчитали, что среднее время, которое родители проводят с детьми в России, равно 15 часов, но как понять, равно ли среднее в генеральной совокупности так же 15, а не, например, тем же 14?
+
+Идея статистического тестирования гипотез (null hypothesis statistical testing) базируется на том, что мы выдвигаем какое-то предположение относительно генеральной совокупности и ее параметров: среднего (математического ожидания), стандартного отклонения или каких-то других параметров, и статистически проверяем это предположение. Если мы будем выбирать много выборок и считать их средние, какова веротность получить такие или более отличающиеся от популяционных выборочные оценки чисто случайным образом, если на самом деле это не так?
+
+> Допустим, мы исследовали семьи в крупных и небольших городах и на нашей выборки посчитали, что в крупных городах родители проводят со своими детьми в среднем не 14 часов, а в небольших городах -- 15 часов в неделю. Отличается статически значимо время, которое проводят родители с детьми в России в крупных и небольших городах?
+
+Мы увидели вопрос о статистической значимости. **Статистическая значимость** -- вероятностный уровень, через который должны перешагнуть наши найденные значения на *выборке* для того, чтобы мы могли сделать вывод о *генеральной совокупности*.
+Почему нельзя просто сказать, что 14 и 15 -- очевидно разные числа, значит, и значения различаются? Потому что мы измерили эти значения только на одной выборке, а выводы, которые мы делаем, базируются на вероятностях получить такие или иные значения или частотах их возникновения (фреквентистская статистика!). И мы знаем, что если мы будем повторять исследование много-много раз, то средние в них не будут одинаковы, согласно центральной предельной теореме [#ctt], они будут распределны нормально, где средним будет -- среднее генеральной совокупности (математической ожидание).
+
+Для того, чтобы ответить на вопрос, есть ли статистически значимые различия, нужно проверить гипотезу о различиях по алгоритму **NHST (null hypothesis statistical testing)**
+
+## NHST: чек-лист проверки гипотезы
+
+* Сформулирована **эмпирическая гипотеза** (гипотеза на языке возможностей того исследования, которое будет проводиться), выделены **зависимая и независимая переменная** и характер исследуемой связи между ними.
+* Есть понимание, как будут выглядеть собранные данные.
+* Сформулированы **нулевая** $H_0$ и **альтернативная** $H_1$ **гипотезы** 
+* Выбраны **уровень значимости** $\alpha$ (чаще всего α=0.05) и **статистическая мощность** $power = 1-\beta$ (чаще всего power=0.8).
+* Выбран **статистический метод** проверки гипотезы (например, t-test, Манна-Уитни тест, ANOVA, тест Краскела-Уоллиса, корреляционный тест, линейная регрессия и т.д.).
+* На основании α, power и размера эффекта предыдущих исследований для выбранного статистического метода рассчитан **размер необходимой выборки**.
+* Выбрана среда анализа данных, данные предобработаны.
+* Для выбранных переменных по отдельности посчитаны **описательные статистики**, переменные визуализированы с помощью гистограммы (histogram) или столбчатой диаграммы (barplot) или графика плотности вероятности (density plot).
+* Проведен **статистический тест** выбранным статистическим методом, рассчитаны p-value, ключевая статистика (t-значение, F-значение, R, R2 и т.д) и размер эффекта (Cohen’s d, eta squared и тд).
+* Полученные в ходе статистического теста **статистики проинтерпретированы**
+* На основании полученных статистик **сделаны выводы относительно эмпирической гипотезы**.
+* Данные в**изуализированы** иллюстрирующим статистический тест графиком (диаграмма рассеяния с линией тренда, боксплот, вайолин плот и другие).
+
+Разберем каждый шаг.
+
+## Эмпирические гипотезы
+
+**Эмпирические гипотезы** – те, которые мы можем проверить опытным путем. Чтобы правильно их сформулировать, нам надо также определиться с типом эмпирического исследования, которое возможно для проверки наших теоретических гипотез. В психологических исследованиях это чаще всего **эксперимент, квази-эксперимент, корреляционное исследование (и лонгитюдное исследование** как его подвид). Иногдd бывает **case study**, исследование одного конкретного случая, чаще в когнитивной психологии и нейронауках.
+
+Эмпирические гипотезы сформулированы в проверяемом для нашего исследования виде, то есть переведенные на язык исследования, исходя из наших предполагаемых переменных и их значений. 
+
+<p align="center"> 
+```{r eval=TRUE, echo = FALSE, message = FALSE, fig.align = 'center', out.width="100%"}
+knitr::include_graphics("docs/images/hypothesis.png")
+```
+</p>
+
+Разберем несколько примеров
+Ситуация 1
+
+> Предположим, что группа ученых хочет исследовать влияние курения на возникновение ментальных расстройств Какие исследования можно провести для исследования этого вопроса?
+
+Ситуация 2
+
+> Предположим, что перед выборам в государственную думу группа социологов проводит опрос общественного мнения с целью выявления предпочтений к кандидатам. Для этого операторы колл-центра обзванивали телефонные номера, выбранные случайным образом из справочника телефонов Москвы, по принципу "каждый десятый номер". Обзвон продолжался в течение недели в рабочее время операторов колл-центра с 10 до 18.
+
+И вернемся к нашей ситуации
+
+> Исследование семейных пар в России (объем выборки составил 100 семейных пар), в которых есть дети подросткового возраста, показало, что те пары, где отец и мать работают полный рабочий день, они проводят со своими детьми в среднем 15 часов свободного времени в неделю. Согласно данным проведенного исследования, стандартное отклонение оказалось равным 4,5 (ч). Можно ли на уровне доверия 0,99 утверждать, что в семьях, в которых работают и отец, и мать, в среднем в течение недели родители проводят с детьми подросткового возраста больше 14 часов?
+
+Метод, который здесь используется -- это квази-эксперимент или корреляционное исследование (так как мы не можем взять одинаковые семьи и оодним сказать "проводите по 15 часов с детьми", а другим -- "проводите по 14 часов с детьми", у нас уже есть эти группы, мы не проводим манипуляции сами).
+
+Эмпирическая гипотеза может звучать так: `семьи, живущие в крупных  городах, проводят в среднем меньше времени с детьми, чем семьи, живующие в маленьких городах`
+
+Для того, чтобы проверить, есть ли статистически значимые различия между этими группами, нужно сформулировать нулевую и альтенативную гипотезы.
 
 ## Нулевая и альтернативные гипотезы
 
@@ -165,4 +176,19 @@ r
 
 
 
+
+
+$\mu$ = 18, M = 15, n = 100, sd = 4.5
+
+Построим распределение выборочных средних. Мы предположили, что популяционное среднее равно 18, а чему равно стандартное отклонение этого распределения?
+
+Сначала считаем стандартную ошибку среднего $\mathrm{se} = \frac{\sigma}{\sqrt{n}} = \frac{sd}{\sqrt{n}}$
+
+Как понять, насколько далеко наше выборочное среднее отклонилось от популяционного в 18? 
+
+Надо посчитать z-оценку!
+
+https://gallery.shinyapps.io/dist_calc/ 
+
+<!-- $z = \frac{x - \bar x}{s}$ -->
 
